# wealthy

./: .codespellignore  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  cd.yml  ci.yml
src/: cell_widths.rs  cells.rs  color_triplet.rs  emoji_codes.rs  emoji_replace.rs  export_format.rs  filesize.rs  lib.rs  measure.rs  palette.rs  palettes.rs  ratio.rs  region.rs  spinners.rs  terminal_theme.rs
src/spinners/: data.rs  names.rs
