[package]
name = "wealthy"
version = "0.1.0"
authors = ["wizard-28 <wiz28@protonmail.com>"]
edition = "2021"
description = "[Rich](https://github.com/Textualize/rich) ported to Rust!"
repository = "https://github.com/wizard-28/wealthy"
license = "GPL-3.0-or-later"
keywords = ["color", "rich", "port", "term", "cli"]
categories = ["command-line-interface"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.5"
separator = "0.4.1"

[dev-dependencies]
rstest = "0.12.0"
