[package]
name = "wealthy"
version = "0.2.0"
authors = ["wizard-28 <wiz28@protonmail.com>"]
edition = "2021"
description = "[Rich](https://github.com/Textualize/rich) ported to Rust!"
repository = "https://github.com/wizard-28/wealthy"
license = "GPL-3.0-or-later"
keywords = ["color", "rich", "port", "term", "cli"]
categories = ["command-line-interface"]

[dependencies]
cached = "0.43.0"
fraction = { version = "0.13.1", default-features = false }
lazy_static = "1.4.0"
lru = "0.10.0"
maplit = "1.0.2"
ordered-float = "3.7.0"
regex = "1.8.1"
separator = "0.4.1"
unicode-segmentation = "1.10.1"

[dev-dependencies]
rstest = "0.17.0"
